# FEDWatcher

./: .gitignore  LICENSE  README.md  kitspace.yaml  requirements.txt
docs/img/: FEDWatcher.drawio
fedwatch/: LICENSE  example.py  pyproject.toml  setup.cfg
fedwatch/src/: fedwatch.py  fedwatcher.py
fedwatcher/: GUI.py  config.yaml  example.py  pyproject.toml  readme.md  trial.py
fedwatcher/data/: FED006_031721_04.CSV  FED007_031821_00.CSV  FED010_031721_00.CSV  FED011_031821_00.CSV
fedwatcher/img/: icons.sh
fedwatcher/src/: KeyClipWriter.py  VideoFeedClipper.py  fedwatcher.py
fedwatcher/tdt/: fedwatcher_tdt.R
fedwatcher/viz/: app.R
hardware/RPi_shield/: 1-click-bom.tsv  RPi_shield-cache.lib  RPi_shield.kicad_pcb  RPi_shield.kicad_pcb-bak  RPi_shield.net  RPi_shield.pro  RPi_shield.sch  RPi_shield.sch-bak  _autosave-RPi_shield.kicad_pcb  _autosave-RPi_shield.sch  board_logo.kicad_mod  fp-info-cache  fp-lib-table  sym-lib-table
hardware/RPi_shield/gerbers/: RPi_shield-B_Adhes.gbr  RPi_shield-B_Cu.gbr  RPi_shield-B_Fab.gbr  RPi_shield-B_Mask.gbr  RPi_shield-B_Paste.gbr  RPi_shield-B_SilkS.gbr  RPi_shield-Cmts_User.gbr  RPi_shield-Dwgs_User.gbr  RPi_shield-Eco1_User.gbr  RPi_shield-Eco2_User.gbr  RPi_shield-Edge_Cuts.gbr  RPi_shield-F_Adhes.gbr  RPi_shield-F_CrtYd.gbr  RPi_shield-F_Cu.gbr  RPi_shield-F_Fab.gbr  RPi_shield-F_Mask.gbr  RPi_shield-F_Paste.gbr  RPi_shield-Margin.gbr  (+4 more)
sampleData/: config_00.ini  config_01.ini
sampleSketch/ITI_03/: FED3.cpp  ITI_03.ino
sampleSketch/TRE_11_14/: FED3.cpp  TRE_11_14.ino
tg_bot/: README.md  fw_bot_example.yaml
(+49 files in other folders)
