[metadata]
name = fedwatch
version = 0.0.1
author = John Eastman
author_email = jackeastman00@gmail.com
description = Program for reading from FED3 feeder devices over serial
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RedSweatshirt/fedwatch
project_urls =
    Bug Tracker = https://github.com/RedSweatshirt/fedwatch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src